--- a/html/git.html
+++ b/html/git.html
@@ -13,14 +13,6 @@
       <!--Card-->
       <div class="card">
          <p class="subtitle">Git</p>
-         <h3 id="rt-0"> Работа с файлами и папками в проекте </h3>
-          <ul>
-            <li>ls - расшифровывается как "List files in the directory", что переводится как "перечислить все файлы в папке" или "вывести на экран список файлов в папке".</li>
-            <li>cd - расшифровывается как "Change directory", что переводится как "сменить папку" или "перейти в другую папку".</li>
-            <li>pwd - расшифровывается как "Present working directory", что переводится как "текущая рабочая директория". То есть команда pwd показывает, в какой сейчас папке мы находимся. </li>
-            <li>mkdir - расшифровывается как "Make directory", что переводится как "создать папку".</li>
-            <li>mv - расфшифровывается как"Move", что переводится как "переместить", "передвинуть". С помощью нее можно переместить, переименовать или удалить файл/</li>
-         </ul>
          <h3 id="rt-0"> Рабочий процесс </h3>
          <ul>
             <li>git add - добавление файлов в индекс</li>
@@ -28,6 +20,13 @@
             <li>git commit добавление файлов в репозиторий</li>
             <li>git branch <branch_name> создание новой ветки</li>
             <li>git checkout - переключение между ветками</li>
+         </ul>
+         <h3 id="rt-0"> Работа с файлами и папками в проекте через терминал Git </h3>
+          <ul>
+            <li>pwd - просмотр вашего текущего местоположения.</li>
+            <li>cd - переход в другую папку.</li>
+            <li>ls - список папок и файлов в текущей директории, где была выполнена команда. </li>
+            <li>mkdir - создать папку с указанным именем.</li>
          </ul>
       </div>
       <!--footer-->
