--- a/html/git.html
+++ b/html/git.html
@@ -20,6 +20,7 @@
             <li>git commit добавление файлов в репозиторий</li>
             <li>git branch <branch_name> создание новой ветки</li>
             <li>git checkout - переключение между ветками</li>
+            <li>git push - отправка изменений в удалённый репозиторий</li>
          </ul>
          <h3 id="rt-0"> Работа с файлами и папками в проекте через терминал Git </h3>
           <ul>
